Fixed emojis not aligned issue.

--- a/src/components/Gallery/styles.module.css
+++ b/src/components/Gallery/styles.module.css
@@ -91,7 +91,10 @@
 .desc:before {
   content: '📝';
   display: inline-flex;
-  font-size: 1.5em;
+  margin-right: 8px;
+  width: 24px;
+  font-size: 24px;
+  overflow: hidden;
 }
 
 .footer {
@@ -100,7 +103,10 @@
 
 .footer:before {
   content: '📍';
-  margin: 10px;
+  display: inline-flex;
+  margin-right: 8px;
+  width: 24px;
+  justify-content: center;
 }
 
 .attribution {
